--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
 
         <activity
             android:name=".SettingsActivity"
+            android:hardwareAccelerated="false"
             android:parentActivityName=".MainActivity"
             android:exported="false">
             <!-- Meta-data, if any, can be added here -->
