--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,11 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    def core_version = "1.13.1"
+
+    // Java language implementation
+    implementation libs.core
+
+
 }
