--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission
+        android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE"
+        android:minSdkVersion="34" />
 
 
     <application
@@ -55,7 +58,8 @@
 
         <service
             android:name=".ForegroundService"
-            android:exported="false">
+            android:exported="false"
+            android:foregroundServiceType="microphone">
             <intent-filter>
                 <action android:name="com.project.seniorpal.FOREGROUND_SERVICE" />
             </intent-filter>
