Fix OpenAI Service
Switched to OpenAI-Java

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 android.enableJetifier=true
 android.extractNativeLibs=true
+
+## Disable R8 for Android Library modules as it is still an experimental feature
+#android.enableR8.fullMode=false
