--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,11 +72,10 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
-    def core_version = "1.13.1"
-
     // Java language implementation
     implementation libs.core
 
-    // Zhipu AI Java SDK
-    implementation libs.oapi.java.sdk
+    // OpenAI Java SDK
+    implementation libs.openai.service
+
 }
